k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: luxe-app
  namespace: luxe-app # Pipeline replaces this with luxe-app-dev or luxe-app-prod
  labels:
    app: luxe-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: luxe-app
  template:
    metadata:
      labels:
        app: luxe-app
    spec:
      serviceAccountName: default
      containers:
      - name: luxe-app-container
        image: IMAGE_PLACEHOLDER # Pipeline replaces this with ECR URI
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "250m"
        volumeMounts:
        - name: secrets-store-inline
          mountPath: "/mnt/secrets-store"
          readOnly: true
      volumes:
      - name: secrets-store-inline
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "luxe-aws-secrets"
